# cargo-ddd

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
src/: cargo_meta.rs  cargo_runner.rs  cli.rs  crate_diff_builder.rs  crate_diff_info.rs  crate_diff_request.rs  crate_info.rs  dependency_diff.rs  diff_report.rs  field_size.rs  main.rs  package_id_info.rs  package_source.rs  registry_manager.rs  simple_report_printer.rs  verbose_report_printer.rs
