[package]
name = "cargo-ddd"
version = "0.1.0"
edition = "2024"
authors = ["Oleg Khryptul dark.haron@gmail.com"]
description = "A cargo subcommand for inspecting what changes brings dependency version update into your project"
homepage = "https://github.com/HaronK/cargo-ddd"
keywords = ["utility", "cli", "dependency", "diff", "inspection"]
categories = [
    "command-line-utilities",
    "development-tools",
    "inspection",
    "dependency",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/HaronK/cargo-ddd"
exclude = ["docs/", "examples/", ".github/", "tests"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = "0.23"
semver = "1.0"
