[package]
name = "cargo-ddd"
version = "0.1.1"
edition = "2024"
authors = ["Oleg Khryptul dark.haron@gmail.com"]
description = "A cargo subcommand for inspecting what changes brings dependency version update into your project"
homepage = "https://github.com/HaronK/cargo-ddd"
keywords = ["utility", "cli", "dependency", "diff", "statistics"]
categories = ["command-line-utilities", "development-tools", "security"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/HaronK/cargo-ddd"
exclude = ["docs/", "examples/", ".github/", "tests"]

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
cargo_metadata = { version = "0.23", default-features = false }
indexmap = { version = "2.12", default-features = false, features = ["std"] }
semver = { version = "1.0", default-features = false, features = ["std"] }
